<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".memo.detail.DetailActivity">
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_alarm"
        android:icon="@drawable/ic_alarm"
        android:title="@string/action_alarm"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_location"
        android:title="@string/action_location"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_weather"
        android:title="@string/action_weather"
        app:showAsAction="never" />
</menu>
